--- a/kool_switch/pubspec.yaml
+++ b/kool_switch/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/notification (1).png
+    - assets/images/Filter.png
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
