--- a/kool_switch/android/app/src/main/AndroidManifest.xml
+++ b/kool_switch/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="kool_switch"
+        android:label="Koolswitch"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
