--- a/kool_switch/pubspec.yaml
+++ b/kool_switch/pubspec.yaml
@@ -33,12 +33,23 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  
   cupertino_icons: ^1.0.8
   dotted_border: ^2.1.0
-
+  
 dev_dependencies:
+ flutter_launcher_icons: ^0.13.1 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  adaptive_icon_background: "#0C2239"
+
+
   flutter_test:
     sdk: flutter
+  
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,6 +74,7 @@ flutter:
     - assets/images/
     - assets/images/notification (1).png
     - assets/images/Filter.png
+    - assets/images/app_icon.png
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
